--- a/kubernetes-manifests/api-portal-ingress.yaml
+++ b/kubernetes-manifests/api-portal-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: api-portal
 spec:
   rules:
-  - host: api-portal.my.domain.io
+  - host: api-portal.tap.synable.io
     http:
       paths:
       - pathType: Prefix
