--- a/kubernetes-manifests/kustomization.yaml
+++ b/kubernetes-manifests/kustomization.yaml
@@ -18,32 +18,32 @@ secretGenerator:
 - name: users-redis-pass
   envs:
   - .env.secret
-- name: wavefront-secret
-  envs:
-  - .env.wavefront.secret
+#- name: wavefront-secret
+#  envs:
+#  - .env.wavefront.secret
 
 generatorOptions:
   disableNameSuffixHash: true
 
 resources:
   - namespace.yaml
-  - wavefront.yaml
+  - wavefront.yaml-use-workflow
   - gateway.yaml
   - cart-redis-total.yaml
-  - cart-total.yaml
+#  - cart-total.yaml-use-workflow
   - cart-gateway-config.yaml
   - catalog-db-initdb-configmap.yaml
   - catalog-db-total.yaml
-  - catalog-total.yaml
+#  - catalog-total.yaml-use-workflow
   - catalog-gateway-config.yaml
   - payment-total.yaml
   - order-db-total.yaml
-  - order-total.yaml
+#  - order-total.yaml-use-workflow
   - order-gateway-config.yaml
   - users-db-initdb-configmap.yaml
   - users-db-total.yaml
   - users-redis-total.yaml
-  - users-total.yaml
+#  - users-total.yaml-use-workflow
   - users-gateway-config.yaml
   - frontend-total.yaml
   - frontend-gateway-config.yaml
