add tap deployment artifacts

--- a/tap/workloads/acme-payment/workload.yaml
+++ b/tap/workloads/acme-payment/workload.yaml
@@ -14,6 +14,6 @@ spec:
   source:
     git:
       ref:
-        branch: main
+        branch: Azure
       url: https://github.com/jlafata/acme-fitness-store
     subPath: apps/acme-payment
