trying different git url (subpath not working)

--- a/tap/workloads/acme-identity/workload.yaml
+++ b/tap/workloads/acme-identity/workload.yaml
@@ -15,5 +15,5 @@ spec:
     git:
       ref:
         branch: Azure
-      url: https://github.com/jlafata/acme-fitness-store.git
+      url: https://github.com/jlafata/acme-fitness-store
     subPath: apps/acme-identity
